--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.data.elasticsearch.cluster-name=literature
 spring.data.elasticsearch.cluster-nodes=127.0.0.1:9200
 # Whether to enable Elasticsearch repositories.
 spring.data.elasticsearch.repositories.enabled=true
+
+logging.config.classpath=log4j2.xml
+
+literature.conf.maxSearchableCharLen = 120
